--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,10 @@ spring:
       max-request-size: 100MB
       enabled: true
   datasource:
-    driver-class-name: com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/photo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
-    username: 
-    password: 
-    type: com.alibaba.druid.pool.DruidDataSource
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    url: jdbc:mysql:///photo?useUnicode=true&characterEncoding=utf8&autoReconnect=true&allowMultiQueries=true
+    username: root
+    password: xia925925
   thymeleaf:
     cache: false
   jackson:
