--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 	<groupId>cc.gzvtc</groupId>
 	<artifactId>Photo</artifactId>
 	<version>3.0</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<name>Photo</name>
 	<description>The wedding photography website</description>
@@ -64,10 +64,15 @@
 			<artifactId>spring-boot-starter-tomcat</artifactId>
 			<scope>provided</scope>
 		</dependency>
-		<dependency>
+	<!--	<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
+		</dependency>-->
+		<dependency>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
+			<version>8.0.28</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
